# Scrabble-client

./: .gitignore  CMakeLists.txt
Client/: Client.cpp  Client.h
Interface_Logic/: JSONManager.cpp  Manager.cpp  Manager.h
Interface_Logic/Board_Logic/: Box.cpp  Box.h  Chip.h  Matrix.cpp  Matrix.h
Interface_Logic/JSON_Logic/: JSONManager.cpp  JSONManager.h
Interface_Logic/Logic_Windows/: JoinGame_LW.cpp  JoinGame_LW.h  LogicWindow.cpp  LogicWindow.h  NewGame_LW.cpp  NewGame_LW.h  NewGame_W.cpp  NewGame_W.h
Interface_Logic/Manager/: Manager.cpp  Manager.h
Interface_Logic/Player/: Player.cpp  Player.h
Main/: main.cpp
Scrabble/: CMakeLists.txt  Scrabble.pro  Scrabble.pro.user.203bd74  Scrabble.pro.user.fa9904f  casilla.cpp  casillagrafica.cpp  casillagrafica.h  configlobbymenu.cpp  configlobbymenu.h  configlobbymenu.ui  createlobby.h  createlobbymenu.h  createlobbymenu.ui  ficha.cpp  ficha.h  gameboard.h  gameboard.ui  joinlobbymenu.cpp  joinlobbymenu.h  joinlobbymenu.ui  jugador.h  losemenu.cpp  losemenu.h  losemenu.ui  main.cpp  mainmenu.ui  point.cpp  point.h  tablerografico.cpp  tablerografico.h  waitforgamestartmenu.cpp  waitforgamestartmenu.ui  waitmenu.cpp  winmenu.cpp  winmenu.h  winmenu.ui  winmenu.ui.autosave
Scrabble/Board_Logic/: Box.cpp  Box.h  Matrix.cpp  Matrix.h
Scrabble/Client/: Client.cpp  Client.h
Scrabble/GameLogic/: casillagrafica.h  ficha.cpp  gameboard.cpp  perk.h  point.cpp  tablerografico.cpp  tablerografico.h
Scrabble/Gui/: configlobbymenu.cpp  configlobbymenu.h  createlobby.cpp  createlobbymenu.cpp  joinlobbymenu.cpp  joinlobbymenu.h  losemenu.cpp  losemenu.h  mainmenu.cpp  perks.h.autosave  waitforgamestartmenu.h  waitmenu.h  winmenu.cpp  winmenu.h
Scrabble/JSON_Logic/: JSONManager.cpp  JSONManager.h
Scrabble/Logic_Windows/: JoinGame_LW.cpp  JoinGame_LW.h  LogicWindow.h  NewGame_LW.cpp  NewGame_LW.h
Scrabble/Manager/: Manager.cpp  Manager.h
Scrabble/Player/: Player.cpp  Player.h
Scrabble/Structures/: NodeP.cpp  NodeP.h  NodeW.cpp  NodeW.h  PlayerList.cpp  PlayerList.h  WordsList.cpp  WordsList.h
ScrabbleClient/: .gitignore  CMakeLists.txt  MyJob.cpp  MyJob.h  ScrabbleClient.pro  ScrabbleClient.pro.user.203bd74  ScrabbleClient.pro.user.fa9904f  configFile.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  tilelabel.cpp  tilelabel.h
ScrabbleClient/Client/: Client.cpp  Client.h  include.pri
ScrabbleClient/Gui_Logic/: CasillaGrafica.cpp  CasillaGrafica.h
ScrabbleClient/Interface_Logic/Board_Logic/: Bonus.h  Box.cpp  Box.h  CasillaGrafica.cpp  CasillaGrafica.h  Chip.cpp  FichaGrafica.cpp  FichaGrafica.h  Matrix.cpp  Matrix.h
ScrabbleClient/Interface_Logic/JSON_Logic/: JSONManager.cpp  JSONManager.h
ScrabbleClient/Interface_Logic/Logic_Windows/: JoinGame_LW.cpp  JoinGame_LW.h  LogicWindow.cpp  LogicWindow.h  NewGame_LW.cpp  NewGame_LW.h
ScrabbleClient/Interface_Logic/Manager/: Manager.cpp  Manager.h
ScrabbleClient/Interface_Logic/Player/: Player.cpp  Player.h
ScrabbleClient/Main/: main.cpp
ScrabbleClient/Structures/: BoxList.cpp  BoxList.h  NodeP.h  NodeW.cpp  NodeW.h  PlayerList.cpp  PlayerList.h  SearchList.cpp  SearchList.h  WordsList.cpp  WordsList.h
ScrabbleClient/build-Scrabble-Desktop-Debug/: Makefile  moc_configlobbymenu.cpp  moc_createlobbymenu.cpp  moc_joinlobbymenu.cpp  moc_losemenu.cpp  moc_mainmenu.cpp  moc_mainwindow.cpp  moc_winmenu.cpp  ui_configlobbymenu.h  ui_gameboard.h  ui_mainmenu.h  ui_waitforgamestartmenu.h
ScrabbleClient/html/: classMainWindow-members.html  classMainWindow.html  functions.html  functions_func.html  functions_vars.html  mainwindow_8h_source.html
ScrabbleClient/html/search/: all_2.js  all_3.js  functions_0.js  functions_1.js  functions_3.js  searchdata.js  variables_0.js
ScrabbleClient/latex/: classMainWindow.tex.tmp
Structures/: BoxList.h  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  NodeP.cpp  NodeP.h  NodeW.cpp  NodeW.h  PlayerList.cpp  PlayerList.h  WordsList.cpp  WordsList.h
build-Scrabble-Desktop-Debug/: Makefile  moc_gameboard.cpp  moc_waitforgamestartmenu.cpp  ui_createlobbymenu.h  ui_joinlobbymenu.h  ui_losemenu.h  ui_winmenu.h
build-ScrabbleClient-Desktop-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
